_sass/main.scss
/*****************************************************************************/
/*
/* Common
/*
/*****************************************************************************/

html {
  line-height: 1.8;
}

body {
  color: #313131;
}

@media (min-width: 38em) {
  html {
    font-size: 20px;
  }
}

/*****************************************************************************/
/*
/* Container
/*
/* Liquid layout (specify widths in %)
/*
/*****************************************************************************/

@media (min-width: 38em) {
  .container {
    max-width: 85%;
    margin-left: 7%;
  }
}
@media (min-width: 56em) {
  .container {
    max-width: 85%;
    margin-left: 7%;
  }
}

.center {
  text-align: center;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 600;
}

h5 {
  margin-top: 1rem;
  font-size: 0.85rem;
}

h6 {
  margin-top: 1rem;
  font-size: 0.75rem;
}

code {
  padding: .20em .20em;
  background-color: #eeeeee;
  border-radius: 3px;
  font-size: 100%;
}

pre {
  overflow: auto;
  white-space: pre;
  word-break: normal;
  word-wrap: normal;
  background-color: #f0f0f0;
  border-radius: 4px;
}

pre code {
  color: #101010;
  font-size: 95%;
}


/*****************************************************************************/
/*
/* Masthead
/*
/*****************************************************************************/

.masthead-title small {
  font-size: 70%;
}

/*****************************************************************************/
/*
/* Sidebar
/*
/*****************************************************************************/

.sidebar a {
  margin-left: 0.25rem;
  margin-right: 0.25rem;
}

.sidebar {
  font-size: 0.8rem;
}

.sidebar-nav-item {
  letter-spacing: calc(0.08em);
}

.sidebar .social-icons a {
  padding-right: 0.75em;
}

.sidebar .social-icons a:hover {
  text-decoration: none;
}

@media (min-width: 30em) {
  width: 14%;
  margin-left: 3%;
}

/*****************************************************************************/
/*
/* Posts and pages
/*
/*****************************************************************************/

.page,
.post {
  margin-bottom: 3em;
  font-size: 85%;
  text-align: justify;
}

/* Blog post or page title */
.page-title,
.post-title,
.post-title a {
  color: #707070;
}
.page-title,
.post-title {
  font-size: 180%;
}

/* Meta data line below post title */
.post-date {
  color: #7a7a7a;
  font-size: 85%;
}

/* Related posts */
.related {
  padding-top: 0.25rem;
  border-top: 3px solid #bbb;
}

.related-heading {
  color: #666
}

.related-posts li small {
  font-size: 70%;
}

/* Gist via GitHub Pages */

.gist code {
  border-radius: 4px;
}

/* Tables */
table {
  font-family: "PT Sans", Arial, "Helvetica", sans-serif;
  font-size: 80%;
}

tbody tr:nth-child(odd) td,
tbody tr:nth-child(odd) th {
  background-color: #e9e9e9;
}

/*****************************************************************************/
/*
/* Tags
/*
/* https://github.com/lanyonm/lanyonm.github.io/blob/master/_sass/main.scss
/*
/*****************************************************************************/

.tag-box {
  list-style: none;
  margin: 0;
  padding: 4px 0;
  overflow: hidden;
  line-height: 2.5;
  *zoom: 1;
}
.tag-box:before, .tag-box:after {
  display: table;
  content: "";
  line-height: 0;
}
.tag-box:after {
  clear: both;
}
.tag-box.inline li {
  float: left;
  font-size: 12px;
  font-size: 0.875rem;
  line-height: 2.5;
}
.tag-box a {
  padding: 4px 6px;
  margin: 5px;
  background-color: #e6e6e6;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  text-decoration: none;
}
.tag-box a span {
  vertical-align: super;
  font-size: 10px;
  font-size: 0.625rem;
}

/* For tags below the post title */
.post-tag-box {
  display: block;
  margin-top: -.5rem;
  margin-bottom: 1rem;
  font-size: 85%;
}

.post-tag-box a {
  padding: 2px 6px;
  margin: 2px;
  background-color: #e6e6e6;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  text-decoration: none;
}

.comments-count {
  display: block;
  margin: 1.0rem 0.2rem 0.5rem 0rem;
  font-size: 90%;
}

.comments-count-icon {
  padding: 2px 3px 2px 1px;
  display: inline;
  margin: 0.1rem 0.1rem 0.1rem 0rem;
  font-size: 90%;
}

.comments-count-icon a {
  text-decoration: none;
}


/*****************************************************************************/
/*
/* Themes
/*
/*****************************************************************************/

/* Blue */
.theme-base-0d .container a,
.theme-base-0d .sidebar-toggle,
.theme-base-0d .related-posts li a:hover {
  color: #2a9fb5;
}


/*****************************************************************************/
/*
/* Social Media
/*
/*****************************************************************************/

.social-media {
  font-size: 85%;
  line-height: 2.5;
  margin-bottom: 0.5rem;
  text-decoration: none;
}

.social-media a {
  text-decoration: none;
}

.social-media a:hover {
  background-color: #e6e6e6;
}

.social-media-box {
  display: inline;
  margin-left: 0.5rem;
  border: 1.5px solid #c6c6c6;
  border-radius: 4px;
  padding: 2px 6px;
}

.social-media-box a {
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
}

.social-media-box a:hover {
  text-decoration: none;
}


/*****************************************************************************/
/*
/* Misc
/*
/*****************************************************************************/

/* Line Break */
hr {
  border-top: 3px double #eee;
  border-bottom: 3px double #ddd;
}

/* Smaller sized icons */
.fa-sm-90{
  font-size: 0.90em;
  padding-right: 6px;
  padding-left: 1px;
}

.fa-sm{
  font-size: 0.80em;
  padding-right: 2px;
  padding-left: 1px;
}

